# a1

catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/include/improved_local_planner/: DBLocalPlannerReconfigureConfig.h  FeedbackMsg.h  TrajectoryMsg.h  TrajectoryPointMsg.h
catkin_ws/devel/include/slam_planner/: Cartesian.h  HighCmd.h  HighState.h  IMU.h  LED.h  LowCmd.h  LowState.h  MotorCmd.h  MotorState.h
catkin_ws/devel/include/slamware_ros_sdk/: ActionDirection.h  AddLineRequest.h  AddLinesRequest.h  ArtifactUsage.h  BasicSensorInfo.h  BasicSensorInfoArray.h  BasicSensorValue.h  BasicSensorValueData.h  BasicSensorValueDataArray.h  CancelActionRequest.h  ClearLinesRequest.h  ClearMapRequest.h  GoHomeRequest.h  ImpactType.h  Line2DFlt32.h  Line2DFlt32Array.h  LocalizationMovement.h  LocalizationOptions.h  MapKind.h  MoveByDirectionRequest.h  MoveByThetaRequest.h  MoveLineRequest.h  MoveLinesRequest.h  MoveOptionFlag.h  MoveOptions.h  MoveToLocationsRequest.h  MoveToRequest.h  OptionalBool.h  OptionalFlt32.h  OptionalFlt64.h  OptionalInt16.h  OptionalInt32.h  OptionalInt64.h  OptionalInt8.h  OptionalLocalizationMovement.h  OptionalUInt16.h  OptionalUInt32.h  OptionalUInt64.h  OptionalUInt8.h  RecoverLocalizationRequest.h  (+17 more)
catkin_ws/devel/lib/pkgconfig/: improved_local_planner.pc  slam_planner.pc  slamware_ros_sdk.pc
catkin_ws/devel/share/improved_local_planner/cmake/: improved_local_planner-msg-extras.cmake  improved_local_planner-msg-paths.cmake  improved_local_plannerConfig.cmake
catkin_ws/devel/share/improved_local_planner/docs/: DBLocalPlannerReconfigureConfig-usage.dox
catkin_ws/devel/share/slam_planner/cmake/: slam_planner-msg-extras.cmake  slam_planner-msg-paths.cmake  slam_plannerConfig.cmake
catkin_ws/devel/share/slamware_ros_sdk/cmake/: slamware_ros_sdk-msg-extras.cmake  slamware_ros_sdk-msg-paths.cmake  slamware_ros_sdkConfig.cmake
catkin_ws/src/slamrplidar/improved_local_planner/: CMakeLists.txt  improved_local_planner.kdev4  improved_local_planner_plugin.xml  orignal.rst
catkin_ws/src/slamrplidar/improved_local_planner/.kdev4/: improved_local_planner.kdev4
catkin_ws/src/slamrplidar/improved_local_planner/cfg/: slam_newplanner_test.rviz
catkin_ws/src/slamrplidar/improved_local_planner/include/improved_local_planner/: DBconfig.h  DBlocal_planner_ros.h  distance_calculations.h  equivalence_relations.h  graph_search.h  h_signature.h  homotopy_class_planner.h  homotopy_class_planner.hpp  misc.h  obstacles.h  optimal_planner.h  planner_interface.h  pose_se2.h  recovery_behaviors.h  robot_footprint_model.h  timed_elastic_band.h  timed_elastic_band.hpp  visualization.h  visualization.hpp
catkin_ws/src/slamrplidar/improved_local_planner/include/improved_local_planner/g2o_types/: base_teb_edges.h  edge_acceleration.h  edge_dynamic_obstacle.h  edge_kinematics.h  edge_obstacle.h  edge_prefer_rotdir.h  edge_shortest_path.h  edge_time_optimal.h  edge_velocity.h  edge_velocity_obstacle_ratio.h  edge_via_point.h  penalties.h  vertex_pose.h  vertex_timediff.h
catkin_ws/src/slamrplidar/improved_local_planner/launch/: slam_newplanner_test.launch  slam_planner_online.launch
catkin_ws/src/slamrplidar/improved_local_planner/msg/: FeedbackMsg.msg  TrajectoryMsg.msg
catkin_ws/src/slamrplidar/improved_local_planner/params/: DBlocal_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  office.pgm  office.yaml
catkin_ws/src/slamrplidar/improved_local_planner/src/: DBconfig.cpp  DBlocal_planner_ros.cpp  graph_search.cpp  homotopy_class_planner.cpp  obstacles.cpp  optimal_planner.cpp  recovery_behaviors.cpp  timed_elastic_band.cpp  visualization.cpp
catkin_ws/src/slamrplidar/slamplanner/: version.txt
catkin_ws/src/slamrplidar/slamplanner/params/: nav_obstacles_params.yaml  (+1 more)
(+70 files in other folders)
